--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.3.2",
     "font-awesome": "^4.7.0",
     "g": "^2.0.1",
+    "ngx-image-zoom": "^3.0.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
     "zone.js": "~0.14.2"
